syntax = "proto3";

package node_proto;

message UserNodeRequest {
    uint64 user_id = 1;
}

message UserNodeResponse {
    uint32 node_id = 1;
}

service UserNode {
    rpc WhichNode(UserNodeRequest) returns (UserNodeResponse) {}
}